Trying to stop overflow of numbers

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,8 @@
     border-radius: 10px;
     font-size: 8rem;
     grid-column:  1/5;
+    overflow: hidden;
+    text-overflow: clip;
     text-align: right;
 }
 
